--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           </div>
 
           <div class="note__body">
+            <button class="btn" type="button">Delete Post</button>
             <h1 class="note__title">HTML</h1>
             <p class="note__content">
               First developed by Tim Berners-Lee in 1990, HTML is short for
@@ -159,6 +160,7 @@
           </div>
 
           <div class="note__body">
+            <button class="btn" type="button">Delete Post</button>
             <h1 class="note__title">CSS</h1>
             <p class="note__content">
               Short for cascading style sheets, CSS is a language used to
@@ -179,6 +181,7 @@
           </div>
 
           <div class="note__body">
+            <button class="btn" type="button">Delete Post</button>
             <h1 class="note__title">JS</h1>
             <p class="note__content">
               JavaScript is a text-based programming language used both on the
