--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
           </div>
 
           <div class="note__body">
-            <button class="btn" type="button">Delete Post</button>
+            <img
+              src="icons/delete.svg"
+              alt="delete icon"
+              class="delete__icon"
+            />
             <h1 class="note__title">HTML</h1>
             <p class="note__content">
               First developed by Tim Berners-Lee in 1990, HTML is short for
@@ -160,7 +164,11 @@
           </div>
 
           <div class="note__body">
-            <button class="btn" type="button">Delete Post</button>
+            <img
+              src="icons/delete.svg"
+              alt="delete icon"
+              class="delete__icon"
+            />
             <h1 class="note__title">CSS</h1>
             <p class="note__content">
               Short for cascading style sheets, CSS is a language used to
@@ -181,7 +189,11 @@
           </div>
 
           <div class="note__body">
-            <button class="btn" type="button">Delete Post</button>
+            <img
+              src="icons/delete.svg"
+              alt="delete icon"
+              class="delete__icon"
+            />
             <h1 class="note__title">JS</h1>
             <p class="note__content">
               JavaScript is a text-based programming language used both on the
