--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <input
             class="form__input"
             type="text"
-            placeholder="Search..."
+            placeholder="Search by Title"
             id="input-search"
           />
           <span class="form__span">Search through your notes</span>
