--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <footer class="footer">
       <p class="footer__copyright">
-        &copy; Copyright 2020. All rights reserved.
+        &copy; Copyright <span class="setYear"></span>. All rights reserved.
       </p>
     </footer>
 
